# URM-Simulator

./: .gitignore  Ast.ml  LICENSE  Makefile  README.md  README.new.md  README.old.md  URMLEX.ml  URMLEX.mll  URMParser.ml  URMParser.mli  URMParser.mly  URMREPL.ml  URM_counting_programs.ml  URM_input_output.ml  URM_machine.ml  URM_programs.ml  URM_server.ml  URM_types.ml  URM_types.mli  URMinterpret.ml  dune  exam.txt  exam26.txt  help.me
.claude/: launch.json
.claude/projects/-Users-gabriele-lenzini-IRiSC-Dropbox-Gabriele-Lenzini-17-Software-Visual-Code-URM-Simulator/memory/: MEMORY.md  project_urm.md
.claude/worktrees/condescending-hoover/.claude/: settings.local.json
.claude/worktrees/condescending-hoover/docs/: app.js  index.html  urm-engine.js
.claude/worktrees/condescending-hoover/docs/examples/: cutland_12.txt  test.txt
docs/examples/: exp.txt
examples/: add.txt  sum_prod.txt  two.txt
public/: app.js  index.html  style.css
